fixing problems with menu on mobile

--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -8,7 +8,9 @@
 
 }
 
-.mainMenu {
-    clear: both;
-    margin-bottom: 100px;
+@media only screen and (min-width: 768px) {
+    /* For desktop */
+    .mainMenu {
+        margin-bottom: 100px;
+    }
 }
